Code clean-up (#483)